[SEE-COMMENT] Fixing Layout problems in Toolbox Window
We were having an issue where the Toolbox window (or any window
really) was not adjusting its pane's dimensions to the underlying
Layout, even if this layout had contents like buttons.

The issue us that in a Stack/Card, Layout is a normal Part, and as
such will want to be `position:absolute`. With absolutely positioned
elements, however, the parent element will never "know" how to wrap it
-- the only options are how to deal with overflow.

This suggests that "layout" should be more fundamental to certain Part
kinds, rather than being a Part in itself. We need to think about how
to incorporate this.

In such a refactoring, instead of having a user-created Layout Part,
all Parts that display things can have internal layout properties, and
under the hood we have a special layout element in the shadow DOM that
is *not* a View (but rather a utility). This way Cards will have a
layout by default. Additionally, we can take the desired functionality
we want from the current Layout part and just make something called
Area or Group, which also has a layout under the hood but allows the
user to specify where it will be on the current card.

--- a/css/core.css
+++ b/css/core.css
@@ -68,6 +68,52 @@ st-card.current-card {
     display: block;
 }
 
+/* =Button Styles
+ *----------------------------------------------------*/
+st-button {
+    box-sizing: border-box;
+    display: flex;
+    position: absolute;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    font-family: monospace;
+    border: 1px solid rgb(50, 50, 50);
+    user-select: none;
+}
+
+st-button:hover {
+    cursor: pointer;
+}
+
+st-button:active {
+    background-color: black;
+    color: white;
+}
+
+
+/* =Layout Styles
+ *----------------------------------------------------*/
+st-layout {
+    display: flex;
+    position: absolute;
+    border: 1px solid transparent;
+    box-sizing: border-box;
+}
+
+st-layout.list-column {
+    flex-direction: column;
+}
+
+st-layout.list-row {
+    flex-direction: row;
+}
+
 
 /* =Window Styles
  *----------------------------------------------------*/
@@ -86,12 +132,18 @@ st-window {
  * adjust based on contents, but at minimum be 100%
  * of parent
  */
-st-window > st-stack {
-    min-width: 100%;
-    min-height: 100%;
+st-window > st-stack,
+st-window > st-stack > .current-card {
+    min-width: auto;
+    min-height: auto;
+    height: auto;
+    width: auto
 }
 
-st-window > st-stack > .current-card {
-    min-width: 100%;
-    min-height: 100%;
+/* This is the fix for Toolbox window's
+ * layout, but it's hacky and suggests that
+ * perhaps layouts should be more fundamental
+ **/
+st-window > st-stack > .current-card > st-layout {
+    position: relative;
 }
